--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -64,6 +64,7 @@ $altrusight-warn: mat-palette($mat-red);
 
 // Colors 
 $primary-off-white: #FEFEFA;
+$primary-off-black: #202020;
 $primary-1: mat-color($altrusight-primary, 200);
 $primary-2: mat-color($altrusight-primary, 400);
 $primary-3: mat-color($altrusight-primary, 700);
