--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,18 @@
 <div class="main-container">
     <div class="main-content">
         <div class="payment-feed-container">
-            <mat-card class="paymentFeedCards" *ngFor="let donations of getDonations().slice(0,3)">
+            <mat-card class="paymentFeedCards" *ngFor="let donations of getDonations()">
                 <mat-card-header>
-                    <mat-card-title class="paymentFeedCardTitle">
-                        {{donations.donorName}} donated to {{donations.donationCharityName}}
+                    <mat-card-title>
+                        <span class="paymentFeedTitleUsername">{{donations.donorName}}</span> 
+                        <span class="paymentFeedTitleNotImportant"> donated to </span> 
+                        <span class="paymentFeedTitleNonprofitName" (click)="navigateToNonprofit(donations.donationCharityName)">{{donations.donationCharityName}}</span> 
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content class="paymentFeedCardDescription">
                     {{donations.donationDescription}}
                 </mat-card-content>
-                <mat-card-actions class="paymentFeed-card-actions">
+                <mat-card-actions class="paymentFeedCardActions">
                     <button mat-button>LIKE</button>
                     <button mat-button>SHARE</button>
                 </mat-card-actions>
