--- a/src/app/user/profile-page/profile-page.component.html
+++ b/src/app/user/profile-page/profile-page.component.html
@@ -1,5 +1,11 @@
 <div class="main-container">
-    <div class="profile-container">
-        <h1 class="title">Your Profile</h1>
+    <h1 class="title">Welcome, {{username}}</h1>
+    <div class="row">
+        <div class="col1">
+            <div class="account-settings"></div>
+        </div>
+        <div class="col2">
+            <div class="donation-history"></div>
+        </div>
     </div>
 </div>
