--- a/src/app/user/profile-page/profile-page.component.scss
+++ b/src/app/user/profile-page/profile-page.component.scss
@@ -8,10 +8,24 @@
     height: 100%;
     display: flex; 
     flex-direction: column;
-    .profile-container {
-        flex: 1;
-        background-color: $primary-2;
-        margin: 5%;
-        border-radius: 20px;
+    background-color: $primary-2;
+    .row {
+        display: flex;
+        flex-direction: row;
+        flex: 1 1 500px; 
+        .col1 {
+            display: flex; 
+            flex-direction: column; 
+            flex: 1 1 0; 
+            background-color: $accent-1;
+            margin: 0 10px 0 10px;
+        }
+        .col2 {
+            display: flex; 
+            flex-direction: column; 
+            flex: 1 1 0; 
+            background-color: $accent-2;
+            margin: 0 10px 0 10px;
+        }
     }
 }
