--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -113,6 +113,7 @@
         .altViewNavigation {
             display: flex;
             flex: 1;
+            margin-bottom: -712px;
         }
         .payment-feed-container {
             width: 90%;
