made some progress on mock payment

--- a/src/app/nonprofit/nonprofit-page/nonprofit-page.component.html
+++ b/src/app/nonprofit/nonprofit-page/nonprofit-page.component.html
@@ -20,7 +20,7 @@
                 </div>
             </button>
         </div>
-        <button (click)="donationButtonClicked()" class="donate-box" mat-button>
+        <button (click)="openDonateDialog()" class="donate-box" mat-button>
             <div class="column">
                 <mat-icon class="icon">bloodtype</mat-icon>
                 donate
