--- a/src/app/nonprofit/nonprofit-page/donation-dialog.scss
+++ b/src/app/nonprofit/nonprofit-page/donation-dialog.scss
@@ -1,22 +1,36 @@
 .donation-stepper-container
 {
     width: 100%;
-    
-    .donation-amount-container
-    {
-        width: 100%;
-        height: 100%;
-        // background-color: red;
-        text-align: center;
-
-        .donation-input
-        {
-            width: 50%;
-            margin: auto;
-            // background-color: green;
-        }
-    }
 }
+
+.donation-input
+{
+    width: 80%;
+    margin: auto;
+    // background-color: green;
+}
+
+.donation-inputs-container
+{
+    width: 100%;
+    height: 100%;
+    // background-color: red;
+    text-align: center;
+}
+
+.user-information-parent
+{
+    width: 100%;
+    height: 100%;
+    // background-color: red;
+}
+
+.inputs-container
+{
+    width: 50%;
+    display: inline-block;
+}
+
 
 .close-icon-button 
 {
@@ -24,9 +38,9 @@
     float: right;
     top: -1rem;
     right: -1rem;
+}
 
-    .close-icon 
-    {
-        transform: scale(0.75);
-    }
+.close-icon 
+{
+    transform: scale(0.75);
 }
